# az-fn-rust-http-html

./: .gitignore  Cargo.toml  README.md  host.json  release.sh
HttpTrigger/: function.json
src/: home.rs  main.rs  posts.rs  templates.rs
templates/: 404.html  _base.html  home.html  post.html  posts.html
